@@ -1,3 +1,6 @@
+Changes 0.9.6.9 ->
+ * Allow bogus PRNG when initializing DWR jitter
+
 Changes 0.9.6.8 -> 0.9.6.9
  * Fixed IllegalMonitorStateException when shutting down
 
